Primera conexion con el bakend, nota: hay un error que hay que revisar al visualizar las presguntas

--- a/src/css/listCategories.css
+++ b/src/css/listCategories.css
@@ -40,7 +40,9 @@ img {
     padding: auto;
 }
 
-p {
+.descriptivo {
+    text-align: center;
+    color: #fff;
     margin-top: 15px;
     z-index: 1; 
 }
