--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -165,7 +165,7 @@
     margin-right: 20px;
 }
   
-  .dropdown-toggle {
+  .dropdown-name, .dropdown-toggle {
     background-color: transparent;
     color: white;
     border: none;
@@ -181,7 +181,7 @@
     top: calc(100% + 10px); 
     right: 0;
     background-color: #9747FF;
-    min-width: 160px;
+    min-width: 250px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
     z-index: 1;
@@ -189,26 +189,53 @@
     text-align: center;
     color: #fff;
     overflow: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration:none;
+    z-index: 2;
+    row-gap: 5px;
+  }
+
+  a{
+    text-decoration: none;
+  }
+
+  .dropdown-menu label{
+    cursor: pointer;
+    width: fit-content;
+    font-size: large;
+  }
+
+  .dropdown-menu label:not(.logout):hover{
+    color: #2531AA;
+  }
+
+  .logout:hover{
+    color: #e41414;
+  }
+
+  .hr-menu{
+    width: 70%;
   }
   
   .dropdown-option {
-    padding: 10px;
     cursor: pointer;
     transition: background-color 0.3s;
   }
-
-@media (max-width:768px){
-  .dropdown-toggle{
+@media (min-width:768px){
+  .dropdown-name2{
+    display: none;
+  }
+  .hr-name{
     display: none;
   }
 }
-  
-@media (max-width:400px){
-    .active,.ranking, .dropdown-toggle{
-        font-size: 1em;
+@media (max-width:768px){
+    .dropdown-name, .nav-menu, #items-name{
+      display: none;
     }
-    .dropdown-container{
-        margin-top: -53px;
-    }
+ 
 }
+
   
