--- a/src/css/wildcard.css
+++ b/src/css/wildcard.css
@@ -18,6 +18,11 @@
     line-height: 30px;
     text-align: center;
     position: relative;
+    transition: transform 0.3s ease; 
+}
+
+.icon-header:hover {
+    transform: scale(1.2); 
 }
 
 .cantidad {
