--- a/src/css/subcategories.css
+++ b/src/css/subcategories.css
@@ -17,6 +17,22 @@ main{
     margin: 0 auto;
 }
 
+#type-difficulty{
+  background: #007bff;
+}
+
+#type-difficulty option{
+  border: 0;
+  background: #007bff;
+  border-radius: 5px;
+  color: #fff;
+  display: flex;
+  font-size: 18px;
+  padding: 0 24px;
+  cursor: pointer;
+  transition: .3s;
+}
+
 .subcategorias{
   display: flex;
   justify-content: center;
@@ -69,7 +85,18 @@ main{
   display: flex;
   justify-content: center;
   text-transform: capitalize;
+}
 
+.startGame{
+  border: 0;
+  background-image: linear-gradient(150deg, #9747FF, #2531AA, #007bff);
+  border-radius: 5px;
+  color: white;
+  display: flex;
+  font-size: 18px;
+  padding: 4px 24px;
+  cursor: pointer;
+  transition: .3s;
 }
 
 .cultura-general,
@@ -343,10 +370,6 @@ main{
 select{
   border-radius: 5px;
   height: 20px;
-}
-
-section{
-  margin: 0;
 }
 
 @media (max-width:768px){
