--- a/src/css/subcategories.css
+++ b/src/css/subcategories.css
@@ -9,7 +9,6 @@ main{
 
 .listsubcategories-menu{
   list-style: none;
-    margin: 0;
     padding: 5px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(35vh, 1fr));
@@ -18,16 +17,18 @@ main{
 }
 
 #type-difficulty{
-  background: #007bff;
+  background: #ffffff;
+  width: 150px;
+  height: 30px;
 }
 
 #type-difficulty option{
   border: 0;
-  background: #007bff;
+  background: #c1dfff;
   border-radius: 5px;
-  color: #fff;
+  color: #000000;
   display: flex;
-  font-size: 18px;
+  font-size: 15px;
   padding: 0 24px;
   cursor: pointer;
   transition: .3s;
@@ -72,7 +73,8 @@ main{
 
 .descriptionsubcategory{
   width: 45%;
-  margin-right: 3%;
+  margin-right: 2%;
+  margin-left: 2%;
   display: none;
 }
 .listsubcategories{
@@ -382,4 +384,16 @@ select{
   .listsubcategories{
     width: 100%;
   }
+}
+@media (max-width:600px){
+  .subcategories-main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+  }
+  .descriptionsubcategory{
+    margin-right: 0%;
+    margin-left: 0%;  }
 }
