--- a/src/css/Trivia.css
+++ b/src/css/Trivia.css
@@ -155,8 +155,41 @@
   width: 100%;
 }
 
+.wildcard-icon-overlay {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.5); 
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.wildcard-text-overlay{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  background: #ffffff; 
+  padding: 20px;
+  border-radius: 10px;
+  color: #2531AA;
+  font-size: 20px;
+  text-align: center;
+}
+
+.wildcard-icon-overlay .icon-large {
+  font-size: 5rem;
+  color: white; 
+}
+
 @media (max-width:620px) {
   .question-trivia{
     width: 40vh;
+  }
+  .linetime{
+    padding: 0;
   }
 }
