--- a/src/css/Trivia.css
+++ b/src/css/Trivia.css
@@ -21,12 +21,26 @@
 }
 
 .main-wildcards {
-  
   width: 100%; /* Abarca todo el ancho del contenedor principal */
   display: flex;
-  margin-left: 4%;
   justify-content: center;
+}
 
+.container-wildcard-coins{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.wildcard-bar{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 50px;
+  background: #fff;
+  padding: 5px 20px 5px 10px;
+  border-radius: 8px;
 }
 
 .section-centered {
@@ -106,7 +120,6 @@
   background-color: #fefefe;
   padding: 20px;
   border: 1px solid #888;
-  width: 30%;
   text-align: center;
   border-radius: 5px;
 }
@@ -185,11 +198,46 @@
   color: white; 
 }
 
+.bombicoins{
+  width: fit-content;
+  height: 50px;
+  background: #fff;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3px;
+}
+
+.count-bombicoins{
+  font-size: 25px;
+  color: #2531AA;
+  margin-top: 1px;
+}
+
+.img-bombicoins{
+  width: 28px;
+  height: 28px;
+  margin-left: 5px;
+}
+
+.plus{
+  color: #ffe605;
+  font-size: 30px;
+  line-height: 0;
+}
+
 @media (max-width:620px) {
   .question-trivia{
     width: 40vh;
   }
   .linetime{
     padding: 0;
+  }
+}
+
+@media (max-width:450px) {
+  .container-wildcard-coins{
+    flex-direction: column;
   }
 }
