--- a/src/css/failed.scss
+++ b/src/css/failed.scss
@@ -8,7 +8,7 @@
 
 .glitch {
     color: white;
-    font-size: clamp(4vw, 6vw, 10vw);
+    font-size: 50px;
     position: relative;
     width: 100%;
     margin-top: 100px;
@@ -296,5 +296,12 @@
     }
     .wrapper2 {
         top: 200px;
+    }
+    .failed {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        top: 12%;
     }
 }
