--- a/src/css/subcategories.css
+++ b/src/css/subcategories.css
@@ -78,7 +78,7 @@ main{
   display: none;
 }
 .listsubcategories{
-  width: 55%;
+  width: 95%;
 }
 
 .title-category{
@@ -374,9 +374,87 @@ select{
   height: 20px;
 }
 
+.btn-floating{
+  display: none;
+}
+
+#redondo{
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  align-self: 500px;
+  background: #2531AA;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  border: none;
+}
+
+.btn-flotante {
+  background-color: #2531AA;
+	border-radius: 5px; /* Borde del boton */
+	position: fixed;
+	top: 100px;
+	right: 40px;
+	transition: all 300ms ease 0ms;
+	}
+	.btn-flotante:hover {
+	background-color: #2c2fa5; /* Color de fondo al pasar el cursor */
+	transform: translateY(-7px);
+	width: 70px;
+  height: 70px;
+   border-radius: 50%;
+   align-self: 500px;
+	}
+
+/* Contenedor para centrar el contenido */
+.reload-icon-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  display: none;
+  float: right;
+  margin-right: 20px;
+}
+
+/* Estilos para el ícono de recarga */
+.reload-icon {
+  width: 50px;
+  height: 50px;
+  position: relative;
+  border: 3px solid transparent;
+  border-top: 5px solid #ffffff;
+  border-right: 5px solid #ffffff;
+  border-left: 5px solid #ffffff;
+  border-radius: 50%;
+  transition: transform 1s ease;
+}
+
+.reload-icon::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #ffffff;
+  top: 40px; /* Ajustar según sea necesario */
+  right: -4px; /* Ajustar según sea necesario */
+  transform: rotate(215deg);
+  animation: infinite;
+}
+
+/* Rotación al hacer hover */
+.reload-icon:hover {
+  transform: rotate(360deg);
+}
+
+.change-subcategory{
+  color: #fff;
+}
+
+
 @media (max-width:768px){
   .listsubcategories{
-    width: 70%;
+    width: 100%;
   }
 }
 
@@ -391,9 +469,46 @@ select{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
+    margin-top: 50px;
   }
   .descriptionsubcategory{
+    display: flex;
     margin-right: 0%;
-    margin-left: 0%;  }
+    margin-left: 0%; 
+    width: 100%;
+  }
+  .reload-icon-container{
+    display: flex;
+  }
+  .change-subcategory{
+    display: none;
+    animation: text-opacity 1.5s linear;
+    position: absolute;
+    margin-top: 10px;
+    text-align: center;
+    right: -7px;
+  }
+  @keyframes text-opacity {
+    0%{
+      opacity: 0;
+    }
+    25%{
+      opacity: 0.25;
+    }
+    50%{
+      opacity: 0.5;
+    }
+    75%{
+      opacity: 0.75;
+    }
+    100%{
+      opacity: 1;
+    }
+  } 
+  .btn-floating{
+    display: flex;
+  }
+}
+.reload-icon:hover + .change-subcategory{
+  display: flex;
 }
